# shader-o-matic

./: .gitignore  README  configure.ac
example/: fragment.frag  shader.frag  shader.vert
src/: Makefile.am  fragment.frag  main.cpp  meshLoader.h  shaderomatic.cpp  shaderomatic.h
